[project]
name = "halluciguard"
version = "2.0.0"
description = "HalluciChain — Tool-Augmented Hallucination Detection RL Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "openai>=1.50.0",
    "requests>=2.32.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "halluciguard"
version = "2.0.0"